# BeeLibrary

./: .gitignore  .qmlls.ini  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.py  main.cpp  vcpkg-configuration.json  vcpkg.json
buildtools/: __init__.py  cli.py  config.py  errors.py  shell.py  venv_manager.py
buildtools/commands/: __init__.py  base.py  bootstrap.py  clean.py  compile.py  format.py  help.py  package.py  run.py  test.py
buildtools/providers/: __init__.py  base.py  clang_format.py  cmake.py  git.py  vcpkg.py
db/: db_scripts.qrc  init.sql  test_data.sql
docs/: architecture.md
installer/: BeeLibrary.iss  qt.conf
qml/: Main.qml
qml/base/: PageTemplate.qml
qml/components/: BookCard.qml  SearchBar.qml
qml/pages/bookedit/: BookEditPage.qml  BookForm.qml  FormField.qml
qml/pages/booklist/: BookCard.qml  BookListPage.qml  BookListView.qml  DeleteBookDialog.qml  ErrorBanner.qml  SearchBar.qml  SortBar.qml
qml/utils/: Geometry.qml  Styles.qml
qml/views/: BookEditPage.qml  BookListPage.qml  BookListView.qml
src/: main.cpp
src/controllers/: BookFormController.cpp  BookFormController.hpp  ContextModel.cpp  ContextModel.hpp  NavigationController.cpp  NavigationController.hpp
src/core/: AppEnvironment.cpp  AppEnvironment.hpp  AppInitializer.cpp  AppInitializer.hpp  DatabaseManager.cpp  DatabaseManager.hpp  SqlQueryBuilder.cpp  SqlQueryBuilder.hpp
src/models/: BookListModel.cpp  BookListModel.hpp  BookProxyModel.cpp  BookProxyModel.hpp  ContextModel.cpp  ContextModel.hpp
src/services/: BookDTO.cpp  BookDTO.hpp  BookTable.cpp  BookTable.hpp
tests/: CMakeLists.txt  tst_BookDTO.cpp  tst_BookFormController.cpp  tst_BookProxyModel.cpp  tst_BookTable.cpp  tst_ContextModel.cpp  tst_NavigationController.cpp  tst_SqlQueryBuilder.cpp
